--- a/04/style.css
+++ b/04/style.css
@@ -73,34 +73,35 @@
      line-height: 65px;
  }
 
- h2 {
-
-
-     font-weight: 700;
-     font-size: 34px;
-     line-height: 46px;
-     text-align: center;
+ .section-title{
+text-align: center;
+font-weight: 700;
+font-size: 34px;
+line-height: 46px;
+margin-bottom: 43px;
  }
 
- p {
+.gray-bg{
+background-color: #e5e5e5;
 
-     text-align: center;
-     font-weight: 400;
-     font-size: 18px;
-     line-height: 25px;
- }
+}
 
- div {
-     text-align: center;
- }
+section{
+padding: 100px 0;
+}
 
- .a_port {
-     text-decoration: none;
- }
+.about .container{
+    max-width: 488px;
+}
 
- .p_footer {
+.skills{
+    padding: 50px 0;
+}
 
-     text-align: center;
-     color: #828282;
+.content{
+    text-align: center;
+}
 
- }
+.content p{
+    margin-bottom: 30px;
+}
